--- a/shard2/shard2_cinfig.yml
+++ b/shard2/shard2_cinfig.yml
@@ -1,27 +1,45 @@
 version: "3.8"
 
 services:
-  shard2Srv4:
+  shard2srv4:
     container_name: "shard2SRV4"
     image: "mongo:latest"
     deploy:
       replicas: 1
-    command: mongod --shardsvr --replSet shard1repset --port 27017 --dbpath /data/db
+    command: mongod --shardsvr --replSet shard2repset --port 27017 --dbpath /data/db
+    volumes:
+      - ./shard2srv4:data/db      
     ports:
       - "50004:27017"
     networks:
       - "my_overlay1"
 
-  shard2Srv5:
+  shard2srv5:
     container_name: "shard2SRV5"
     image: "mongo:latest"
     deploy:
       replicas: 1
-    command: mongod --shardsvr --replSet shard1repset --port 27017 --dbpath /data/db
+    command: mongod --shardsvr --replSet shard2repset --port 27017 --dbpath /data/db
+    volumes:
+      - ./shard2srv5:data/db      
     ports:
       - "50005:27017"
     networks:
       - "my_overlay1"
+
+  shard2srv6:
+    container_name: "shard2SRV6"
+    image: "mongo:latest"
+    deploy:
+      replicas: 1
+    command: mongod --shardsvr --replSet shard2repset --port 27017 --dbpath /data/db
+    volumes:
+      - ./shard2srv6:data/db
+    ports:
+      - "50006:27017"
+    networks:
+      - "my_overlay1"
+
 
 networks:
   my_overlay1:
